  basic Servlet capturing) by adding `servlet-api-dispatch` to <<config-disable-instrumentations>> - {pull}1448[1448]
* Add Sampling Profiler support for AArch64 architectures - {pull}1443[1443]
* Support proper transaction naming when using Spring's `ServletWrappingController` - {pull}1461[#1461]
* Update async-profiler to 1.8.2 {pull}1471[1471]

[float]
===== Bug fixes
* Fix `HttpUrlConnection` instrumentation issue (affecting distributed tracing as well) when using HTTPS without using
  `java.net.HttpURLConnection#disconnect` - {pull}1447[1447]
* Fixes class loading issue that can occur when deploying multiple applications to the same application server - {pull}1458[#1458]
* Fix ability to disable agent on startup wasn't working for runtime attach {pull}1444[1444]
* Avoid `UnsupportedOperationException` on some spring application startup {pull}1464[1464]
* Fix ignored runtime attach `config_file` {pull}1469[1469]
* Fix `IllegalAccessError: Module 'java.base' no access to: package 'java.lang'...` in J9 VMs of Java version >= 9 -
  {pull}1468[#1468]

===== Refactors
* Migrate some plugins to indy dispatcher {pull}1404[1404] {pull}1411[1411]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.18.1]]
==== 1.18.1 - 2020/10/06

[float]
===== Refactors
* Migrate some plugins to indy dispatcher {pull}1362[1362] {pull}1366[1366] {pull}1363[1363] {pull}1383[1383] {pull}1368[1368] {pull}1364[1364] {pull}1365[1365] {pull}1367[1367] {pull}1371[1371]

[float]
===== Bug fixes
* Fix instrumentation error for HttpClient - {pull}1402[#1402]
* Eliminate `unsupported class version error` messages related to loading the Java 11 HttpClient plugin in pre-Java-11 JVMs {pull}1397[1397]
* Fix rejected metric events by APM Server with response code 400 due to data validation error - sanitizing Micrometer
metricset tag keys - {pull}1413[1413]
* Fix invalid micrometer metrics with non-numeric values {pull}1419[1419]