@@ -12,7 +12,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
 
     <properties>
-        <version.hibernate.search>6.0.0.Alpha6</version.hibernate.search>
+        <version.hibernate.search>6.0.0.CR1</version.hibernate.search>
         <apm-agent-parent.base.dir>${project.basedir}/../../..</apm-agent-parent.base.dir>
     </properties>
 
